istio/istio-config.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - gitlab.${INGRESS_IP}.sslip.io
        - registry.${INGRESS_IP}.sslip.io
        - headlamp.${INGRESS_IP}.sslip.io
        - kiali.${INGRESS_IP}.sslip.io
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - kiali.${INGRESS_IP}.sslip.io
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
